--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,8 +1,27 @@
-<div (click)="onAddProductToBasket(product.id)">
-  <img src="product.image" />
-  <div>
-    <p>{{ product.name }}</p>
-    <p>{{ product.price }}</p>
-    <p>in basket {{ product.isInBasket }}</p>
-  </div>
-</div>
+<mat-card class="product-card">
+  <mat-card-header>
+    <mat-card-title>{{ product.name }}</mat-card-title>
+    <mat-card-subtitle>{{ product.price | currency }}</mat-card-subtitle>
+  </mat-card-header>
+  <img
+    mat-card-image
+    ngSrc="assets/image.jpg"
+    alt="product image"
+    width="150"
+    height="100"
+    priority
+  />
+  <mat-card-content>
+    <p></p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button
+      mat-button
+      color="primary"
+      [disabled]="product.isInBasket"
+      (click)="onAddProductToBasket(product.id)"
+    >
+      Add to basket
+    </button>
+  </mat-card-actions>
+</mat-card>
