--- a/src/app/pages/layout/layout.page.html
+++ b/src/app/pages/layout/layout.page.html
@@ -1,17 +1,14 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <button mat-icon-button>
-      <h1>Marketplace</h1>
-    </button>
-  </mat-toolbar-row>
-  <mat-toolbar-row> {{ (wallet$ | async)?.balance}} </mat-toolbar-row>
-  <mat-toolbar-row class>
-    <div style="width: 90%"></div>
-    <button mat-icon-button>
-      <mat-icon svgIcon="ic_exit_to_app_24px"></mat-icon>
-      {{ basketTotal$ | async }}
-    </button>
-  </mat-toolbar-row>
+  <h1><a [routerLink]="['/']" class="home-link">Marketplace</a></h1>
+  <span class="spacer"></span>
+  <div>
+    <mat-icon svgIcon="ic_account_balance_wallet_24px"></mat-icon>
+    {{ (wallet$ | async)?.balance | currency }}
+  </div>
+  <button mat-icon-button>
+    <mat-icon svgIcon="ic_shopping_cart_24px"></mat-icon>: {{ basketTotal$ |
+    async }}
+  </button>
 </mat-toolbar>
 <main>
   <router-outlet></router-outlet>
