feat(basket): add basket management
Closes: https://github.com/Bil0/ultra-frontend-test/issues/3

--- a/src/app/pages/layout/layout.page.html
+++ b/src/app/pages/layout/layout.page.html
@@ -3,9 +3,9 @@
   <span class="spacer"></span>
   <div>
     <mat-icon svgIcon="ic_account_balance_wallet_24px"></mat-icon>
-    {{ (wallet$ | async)?.balance | currency }}
+    {{ walletBalance$ | async | currency }}
   </div>
-  <button mat-icon-button>
+  <button mat-icon-button [routerLink]="'/basket'">
     <mat-icon svgIcon="ic_shopping_cart_24px"></mat-icon>: {{ basketTotal$ |
     async }}
   </button>
