feat(checkout): implement the checkout + success scrren
Closes: https://github.com/Bil0/ultra-frontend-test/issues/4, https://github.com/Bil0/ultra-frontend-test/issues/5

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -16,7 +16,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button
-      mat-button
+      mat-raised-button
       color="primary"
       [disabled]="product.isInBasket"
       (click)="onAddProductToBasket(product.id)"
