--- a/src/app/components/user-checkout-form/user-checkout-form.component.html
+++ b/src/app/components/user-checkout-form/user-checkout-form.component.html
@@ -3,62 +3,41 @@
     <mat-form-field>
       <mat-label>First name</mat-label>
       <input matInput formControlName="firstname" type="text" />
-      <mat-error *ngIf="userForm.controls['firstname'].hasError('required')">
-        First name is required
-      </mat-error>
+      <mat-error *ngIf="userForm.controls['firstname'].hasError('required')"> First name is required </mat-error>
     </mat-form-field>
     <mat-form-field>
       <mat-label>Last name</mat-label>
       <input matInput formControlName="lastname" type="text" />
-      <mat-error *ngIf="userForm.controls['lastname'].hasError('required')">
-        Last name is required
-      </mat-error>
+      <mat-error *ngIf="userForm.controls['lastname'].hasError('required')"> Last name is required </mat-error>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field class="street">
       <mat-label>Street</mat-label>
       <input matInput formControlName="street" type="text" />
-      <mat-error *ngIf="userForm.controls['street'].hasError('required')">
-        Street is required
-      </mat-error>
+      <mat-error *ngIf="userForm.controls['street'].hasError('required')"> Street is required </mat-error>
     </mat-form-field>
     <div class="city-state">
       <mat-form-field>
         <mat-label>City</mat-label>
         <input matInput formControlName="city" type="text" />
-        <mat-error *ngIf="userForm.controls['city'].hasError('required')">
-          City is required
-        </mat-error>
+        <mat-error *ngIf="userForm.controls['city'].hasError('required')"> City is required </mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>State</mat-label>
         <input matInput type="text" formControlName="state" />
-        <mat-error *ngIf="userForm.controls['state'].hasError('required')">
-          State is required
-        </mat-error>
+        <mat-error *ngIf="userForm.controls['state'].hasError('required')"> State is required </mat-error>
       </mat-form-field>
     </div>
   </div>
   <mat-form-field>
     <mat-label>Email</mat-label>
     <input matInput type="email" formControlName="email" />
-    <mat-error *ngIf="userForm.controls['email'].hasError('required')">
-      Email is required
-    </mat-error>
-    <mat-error *ngIf="userForm.controls['email'].hasError('email')">
-      Email not valid
-    </mat-error>
+    <mat-error *ngIf="userForm.controls['email'].hasError('required')"> Email is required </mat-error>
+    <mat-error *ngIf="userForm.controls['email'].hasError('email')"> Email not valid </mat-error>
   </mat-form-field>
   <p>Total: {{ totalPrice | currency }}</p>
   <div class="submit">
-    <button
-      mat-raised-button
-      type="submit"
-      color="primary"
-      [disabled]="!userForm.valid"
-    >
-      Pay
-    </button>
+    <button mat-raised-button type="submit" color="primary" [disabled]="!userForm.valid">Pay</button>
   </div>
 </form>
