--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,3 @@
 <div class="products">
-  <app-product
-    *ngFor="let product of  homeProducts$ | async"
-    [product]="product"
-    (addProductToBasket)="onAddProductToBasket($event)"
-  ></app-product>
+  <app-product *ngFor="let product of homeProducts$ | async" [product]="product" (addProductToBasket)="onAddProductToBasket($event)"></app-product>
 </div>
